init nepb commit

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "holger1411/cb-gaffsy",
+    "name": "holger1411/cb-nepb",
     "description": "Basic Child Theme for Understrap Theme Framework",
     "type": "library",
     "license": "GPL-2.0",
@@ -8,5 +8,5 @@
         "smalot/pdfparser": "^2.2"
     },
     "keywords": ["wordpress","theme","bootstrap"],
-    "homepage": "https://github.com/holger1411/cb-gaffsy"
+    "homepage": "https://github.com/holger1411/cb-nepb"
 }
